--- a/wsgi/openshift/templates/bz/core/base.html
+++ b/wsgi/openshift/templates/bz/core/base.html
@@ -55,7 +55,8 @@
             var res = str.split("\|"); 
             var user = res[0];
             if (String(user) == "rhn-support-cww" || String(user) == "rhn-support-mowens" ||
-               String(user) == "rhn-support-vanhoof" || String(user) == "rhn-support-skramer"){
+               String(user) == "rhn-support-vanhoof" || String(user) == "rhn-support-skramer" ||
+               String(user) == "rhn-support-tiwillia"){
                document.getElementById("config-menu").style.display = 'block';
             }
             else {
