--- a/wsgi/openshift/templates/bz/add_req/add_req.html
+++ b/wsgi/openshift/templates/bz/add_req/add_req.html
@@ -1,5 +1,5 @@
 {% block content %}
-
+{% load templatetags %}
 
 <div class="container">
    {% block message %}
@@ -112,9 +112,30 @@
             <button id="unlock" onclick="edit_expression();" class="btn btn-default">Edit</button>
 
             {% if req_type == "message" %}
+               {% if message != "" %}
+                  <script>
+                     document.getElementById("message").value = "{{ message.description|safe }}";
+                     document.getElementById("message-name").value = "{{ message.name|safe }}";
+                     document.getElementById("main-expression").value = '{{ message.expression|safe }}';
+
+                     options = document.getElementById("message-type");
+                     for(var i = 0; i < options.length; i++){
+                        if(options.options[i].value == "{{ message.message_type|lower }}"){
+                           document.getElementById("message-type").selectedIndex = i;
+                        }
+                     }
+                  </script>
+               {% endif %}
+
                <button onclick="submit_message();"
                   class="btn btn-success">Submit</button>
             {% else %}
+               {% if message != "" %}
+                  <script>
+                     document.getElementById("main-expression").value = '{{ message.expression|safe }}';
+                  </script>
+               {% endif %}
+
                <button onclick="submit_req();"
                   class="btn btn-success">Submit</button>
             {% endif %}
@@ -200,7 +221,7 @@
             }
          }
 
-         new_value = String("'" + selected_values +"'");
+         new_value = String('"' + selected_values +'"');
       }
    
       else{
@@ -208,7 +229,7 @@
          type = id.toLowerCase();
 
 
-         new_value = String("'" + text.value + "'");
+         new_value = String('"' + text.value + '"');
       }
       
       var function_type = document.getElementById(id + "-function");
@@ -221,12 +242,13 @@
       var start = text.substring(0, cursor);
       var end = text.substring(select, text.length);
 
-      var middle = String("(" + type + "." + function_value + "(" + new_value + "))")
+      var middle = String(type + "." + function_value + "(" + new_value + ")")
       
       expression.value = (start + middle + end);     
 
       function_type.options[0].selected = true;
       document.getElementById(id).value = "";
+      document.getElementById(id + '-modal-expression').selectionStart = expression.value.length;
 
    }
 
@@ -254,7 +276,6 @@
       }
 
       document.getElementById('requirement_select').options[0].selected = true;
-
    }
 
    function display_modal(){
@@ -278,8 +299,8 @@
       var start = text.substring(0, cursor)
       var middle = text.substring(cursor, select)
       var end = text.substring(select, text.length)
-      
-      cursor = 0;
+     
+
       switch (object.id) {
       case String(req + "and_button"):
          middle = " & ";
