--- a/wsgi/openshift/templates/bz/groups/show_group/group.html
+++ b/wsgi/openshift/templates/bz/groups/show_group/group.html
@@ -1,210 +1,20 @@
 {% block group %}
    {% load templatetags %}
    <div class="container">
-      <style>
-         button.add-message {
-            margin-top:12px !important;
-            margin-bottom:10px !important;
-            margin-left:50px !important;
-         }      
-         button.add-group {
-            margin-top:12px !important;
-            margin-bottom:10px !important;
-            margin-left:70px !important;
-         }      
-      </style>
-      <form method="post" id="add_message">{{ csf_token }}
-         <input type="hidden" name="add_req" value="{{ group.group_id }}">
-         <input type="hidden" name="req_type" value="message">
-      </form>
+      <h2>{{ group.name }}</h2>
 
-      <form method="post" id="add-requirement">{% csrf_token %}
-         <input type="hidden" name="req_type" value="group">
-         <input type="hidden" name="add_req" value="{{ group.group_id }}">
-      </form>
-
-      <form method="post" id="edit-requirement">{% csrf_token %}
-         <input type="hidden" name="req_type" value="group">
-         <input type="hidden" name="add_req" value="{{ group.group_id }}">
-      </form>
-
-      <h1>{{ group.name }}</h1>
-
-      <div class="row">
-         <div class="col-md-12">
-            <ul class="nav nav-tabs" role="tablist">
-               <li class="active">
-                  <a href="#{{ group.name }}" data-toggle="tab" role="tab">Details</a>
-               </li>
-               {% if "messages" in group %}
-                  <li><a role="tab" data-toggle="tab" href="#messages">Messages</a></li>
-               {% endif %}
-               {% if "groups" in group %}
-                  <li><a role="tab" data-toggle="tab" href="#groups">Groups</a></li>
-               {% endif %}
-               <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Tools</a>
-                  <ul class="dropdown-menu" role="menu">
-                     {% if "req" in gorup %}
-                        <li><a onclick="document.getElementById('add-requirement').submit();" 
-                           role="tab" data-toggle="tab" href="#">Add Requirement</a></li>
-                     {% else %}
-                        <li><a onclick="document.getElementById('edit-requirement').submit();" 
-                           role="tab" data-toggle="tab" href="#">Edit Requirement</a></li>
-                     {% endif %}
-                     <li><a onclick="document.getElementById('add_message').submit();" 
-                        role="tab" data-toggle="tab" href="#">Add Message</a></li>
-                     <li><a role="tab" data-toggle="tab" href="#add-group">Add Group</a></li>
-                     <li><a role="tab" data-toggle="tab" href="#raw-data">Raw Group Data</a></li>
-                  </ul>
-               </li>
-             <ul>        
-         </div>
-      </div>
-
-      <div class="tab-content">
-         <div class="tab-pane" id="raw-data">
-            <pre>{{ group|json }}</pre>
-         </div>
-
-         <div class="tab-pane active" id="{{ group.name }}">
-            {% if "description" in group %}
-               <dl class="dl-horizontal">
-                  <dt><h3>Description</h3></dt>
-                  <dd>{{ group.description}}</dd>
-               </dl>
+      <ol class="breadcrumb">
+         {% for i in group.path %}
+            {% if forloop.first %}
+               <li><a href="/compliance">Home</a></li>
+            {% else %}
+               <li><a href="/showgroup/{{ i.group_id }}">{{ i.name }}</a></li>
             {% endif %}
-            <br />
+         {% endfor %}
+      </ol>
 
-            <div class="row">
-               <div class="col-md-3">
-                  <dl class="dl-horizontal">
-                     <dt style="width:auto">Active:</dt>
-                     <dd>{{ group.isActive }}</dd>
-                  </dl>
-               </div>
-            </div>
-
-            <br />
-
-            <div class="row">
-               <div class="col-md-12">
-                  {% if "req" in group %}
-                     <div class="row">
-                        <div class="col-md-10">
-                           <label for="{{ group.name }}">Requirement Expression</label>
-                           <textarea class="form-control" style="resize:vertical" 
-                              id="{{ group.name }}-req-expression" 
-                              readonly>{{ group.req.expression }}</textarea>
-                        </div>
-                        <div class="col-md-2" align="left" style="margin-top:24px; padding:0px">
-                           <button class="btn btn-primary" type="submit" name="add_req" 
-                              onclick="document.getElementById('edit-requirement').submit();">
-                              <span class="glyphicon glyphicon-edit"></span> Edit</button>
-                        </div>
-                     </div>
-                  {% endif %}
-               </div>
-            </div>
-         </div>
-
-         {% if "messages" in group %}
-            <div class="tab-pane" id="messages">
-            <br />
-               <div class="row">
-                  <div class="col-md-10">
-                     <h3>Messages</h3>
-                  </div>
-                  <div class="col-md-2">
-                  </div>
-               </div>
-               <div class="row">
-                  <div class="col-md-12">
-                     <table class="table table-hover">
-                        <tr>
-                           <th>Name</th>
-                           <th>Message Description</th>
-                           <th>Type</th>
-                           <th>Expression</th>
-                           <th></th>
-                        </tr>
-                        {% for i in group.messages %}
-                           <tr>
-                              <td width="15%">{{ i.name }}</td>
-                              <td>{{ i.description }}</td>
-                              <td>{{ i.type }}</td>
-                              <td>{{ i.req.expression }}</td>
-                              <td align="right">
-                                 <button class="btn btn-default">
-                                    <span class="glyphicon glyphicon-edit"></span> Edit</button>
-                              </td>
-                           </tr>
-                        {% endfor %} 
-                     </table>
-                  </div>
-               </div>
-            </div>
-         {% endif %}
-         {% if "groups" in group %}
-            <div class="tab-pane" id="groups">
-            <br />
-               <div class="row">
-                  <div class="col-md-10">
-                     <h3>Groups</h3>
-                  </div>
-                  <div class="col-md-2">
-                  </div>
-               </div>
-               <div class="row">
-                  <div class="col-md-12">
-                     <table class="table table-striped">
-                        <thead>
-                           <tr>
-                              <th>Group Name</th>
-                              <th>Attached Groups</th>
-                              <th>Description</th>
-                              <th>Expression</th>
-                           </tr>
-                        </thead>
-                        {% for i in group.groups %}
-                           <tr>
-                              <td><a href="/showgroup/{{ i.group_id }}/">{{ i.name }}</a></td>
-                              <td>{{ i.groups }}</td>
-                              <td>{{ i.description }}</td>
-                              <td>{{ i.req.expression }}</td>
-                           </tr>
-                        {% endfor %}
-
-                     </table>
-                  </div>
-               </div>
-            </div>
-         {% endif %}
-         <div class="tab-pane" id="add-group">
-            <br />
-            <form method="post" id="myform">{% csrf_token %}
-               <div class="row">
-                  <div class="col-md-12">
-                     <label for="name">Group Name</label>
-                     <input id="name" name="name" type="text" class="form-control input-md">
-                  </div>
-               </div>   
-               <br />
-               <div class="row">
-                  <div class="col-md-12">
-                     <label for="description">Description</label>
-                     <textarea class="form-control" name="description" id="description" rows="2"></textarea>
-                  </div>
-               </div>
-               <br />
-               <div class="row">
-                  <div class="col-md-12">
-                     <button id="submit" name="add_group" 
-                        value="{{ i.name }}" type="submit" 
-                        class="btn btn-warning">Submit</button>
-                  </div>
-               </div>
-            </form>
-         </div>
-      </div>
+      {% with product=group template_name="bz/tabs/main.html"%}
+         {% include template_name %}
+      {% endwith %}
    </div>
 {% endblock %}
