--- a/wsgi/openshift/templates/bz/tabs/child.html
+++ b/wsgi/openshift/templates/bz/tabs/child.html
@@ -1,13 +1,71 @@
-{% if node.groups|length > 0 %}
-   <li class="dropdown-submenu"><a tabindex="-1" href="/showgroup/{{ node.group_id }}/">{{ node.name }}</a>
-      <ul class="dropdown-menu">
-         {% for child in node.groups %}
-            {% with node=child template_name="bz/tabs/child.html" %}
-               {% include template_name %}
-            {% endwith %}
-         {% endfor %}
-      </ul>
+{% if "groups" in node %}
+
+   <li class="list-group-item">
+      <h4>
+         <a style="color:#999" class="panel-toggle" data-toggle="collapse" 
+            data-parent="#{{ node.group_id }}-parent" 
+            href="#{{ node.group_id }}-parent">{{ node.name }}
+         </a>
+      </h4>
    </li>
+
+   <div class="panel-collapse collapse" id="{{ node.group_id }}-parent">
+      <li class="list-group-item">
+         <a  class="panel-toggle" data-toggle="collapse" 
+            data-parent="#{{ node.group_id }}-parent" 
+            onclick="display_content('{{ node.group_id }}-group-content');"
+            href="#">Dashboard
+         </a>
+      </li>
+
+      <li class="list-group-item">
+         <a onclick="display_content('{{ node.group_id }}-messages');" href="#">
+            Messages
+         </a>
+      </li>
+      <li class="list-group-item">
+         <a class="panel-toggle" data-toggle="collapse" 
+            href="#{{ node.group_id }}-parent-groups">Groups</a>
+      </li>
+      <div class="panel-collapse collapse" id="{{ node.group_id }}-parent-groups" data-parent="#{{ node.group_id }}-parent">
+         <li class="list-group-item">
+   
+            <ul class="list-group firefox-error" role="tablist" >
+               {% for child in node.groups %}
+                  {% with node=child template_name="bz/tabs/child.html" %}
+                     {% include template_name %}
+                  {% endwith %}
+               {% endfor %}
+            </ul>
+         </li>
+      </div>
+   </div>
+
 {% else %}
-   <li><a href="/showgroup/{{ node.group_id }}/">{{ node.name }}</a></li>
+   <li class="list-group-item">
+      <h4>
+         <a style="color:#999" class="panel-toggle" data-toggle="collapse" 
+            data-parent="{{ node.group_id }}-parent" 
+            href="#{{ node.group_id }}-parent">{{ node.name }}
+         </a>
+      </h4>
+   </li>
+
+   <div class="panel-collapse collapse" id="{{ node.group_id }}-parent">
+      <ul class="list-group" role="tablist">
+         <li class="list-group-item">
+            <a  class="panel-toggle" data-toggle="collapse" 
+               data-parent="#{{ node.group_id }}-parent" 
+               onclick="display_content('{{ node.group_id }}-group-content');"
+               href="#">Dashboard
+            </a>
+         </li>
+
+         <li class="list-group-item">
+         <a onclick="display_content('{{ node.group_id }}-messages');" href="#">
+            Messages
+         </a>
+         </li>
+      </ul>
+   </div>
 {% endif %}
